--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "license": "MIT",
   "dependencies": {
     "@hono/node-server": "^1.3.3",
+    "dotenv": "^16.4.7",
     "hono": "^4.6.20",
-    "node-llama-cpp": "^3.5.0"
+    "node-llama-cpp": "^3.5.0",
+    "openai": "^4.82.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
