feat: folder and file id support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # OpenAI Configuration (optional)
 OPENAI_API_KEY=your_api_key_here
 OPENAI_MODEL_NAME=gpt-4o-mini # or any other OpenAI model
+
+# Database Configuration
+DATABASE_URL=postgresql://postgres:password@localhost:5432/your_database_name
