--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "@hono/node-server": "^1.3.3",
+    "drizzle-kit": "^0.30.2",
+    "drizzle-orm": "^0.38.4",
     "dotenv": "^16.4.7",
     "hono": "^4.6.20",
     "node-llama-cpp": "^3.5.0",
-    "openai": "^4.82.0"
+    "openai": "^4.82.0",
+    "pg": "^8.13.1"
+    
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
