fix: chat completion

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ PORT=57352
 OPENAI_API_KEY=your_api_key_here
 OPENAI_MODEL_NAME=gpt-4o-mini # or any other OpenAI model
 
+# Default Models Configuration
+EMBEDDING_MODEL=all-MiniLM-L6-v2.Q4_K_M # Model used for database RAG operations
+
 # Database Configuration
 DATABASE_URL=postgresql://postgres:password@localhost:5432/rag
